--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
-      <h3>Виталий, скоро тридцатник</h3>
+      <h3>Виталик, скоро тридцатник</h3>
       <p>И я... решил упороться в верстку</p>
       <h3>Чем могу быть полезен</h3>
       <p>Пока только развлечь недоискрометным юмором.</p>
