--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-        decadancetsk@gmail.com
+        <a href="mailto:decadancetsk@gmail.com" class="header_email">decadancetsk@gmail.com</a>
+        <a href="tel:+79138831183" class="header_phone">+79138831183</a>
       </div>
     </header>
 
