--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <div class="container">
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+        <img src="files/user.jpg" width="928" height="536" alt="Мое фото">
+      </figure>
       <h3>Виталик, скоро тридцатник</h3>
       <p>И я... решил упороться в верстку</p>
       <h3>Чем могу быть полезен</h3>
@@ -35,19 +38,23 @@
     <div class="container">
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure>
+        <img src="files/project.jpg" width="928" height="536" alt="Сайт инструктора Кекса">
+      </figure>
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
+      <a class="button" href="source/project/index.html">
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
     </section>
     </div>
-
-    <div class="container">
+    
     <footer class="page-footer">
-      Контакты в подвале
+      <div class="container">
+        <a class="footer_email" href="mailto:decadancetsk@gmail.com">decadancetsk@gmail.com</a>
+        <a class="footer_phone" href="tel:+79138831183">+79138831183</a>
+      </div>
     </footer>
-    </div>
   </body>
 </html>
