--- a/index.html
+++ b/index.html
@@ -15,40 +15,53 @@
       </div>
     </header>
 
-    <div class="container">
     <section class="hero-image">
-      <h1 class="heading">Бычков Виталий</h1>
-      <p>Обучаюсь верстке</p>
+      <div class="container">
+        <h1 class="heading">Бычков Виталий</h1>
+        <p>Обучаюсь верстке</p>
+      </div>
     </section>
-    </div>
 
-    <div class="container">
     <section class="intro">
-      <h2 class="subheading">Давайте познакомимся</h2>
-      <figure class="user-image">
-        <img src="files/user.jpg" width="928" height="536" alt="Мое фото">
-      </figure>
-      <h3>Виталик, скоро тридцатник</h3>
-      <p>И я... решил упороться в верстку</p>
-      <h3>Чем могу быть полезен</h3>
-      <p>Пока только развлечь недоискрометным юмором.</p>
+      <div class="container">
+        <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="files/user.jpg" width="928" height="536" alt="Мое фото">
+        </figure>
+        <div>
+          <h3>Виталик, скоро тридцатник</h3>
+          <p>И я... решил упороться в верстку</p>
+        </div>
+        <div>
+          <h3>Чем могу быть полезен</h3>
+          <p>Пока только развлечь недоискрометным юмором.</p>
+        </div>
+        <div class="skills">
+          <h3>Мои навыки</h3>
+          <dl class="skills-list">
+            <dt class="skill-html">HTML</dt>
+            <dd class="level"><div style="width: 60%">60%</div></dd>
+            <dt class="skill-css">CSS</dt>
+            <dd class="level"><div style="width: 40%">40%</div></dd>
+          </dl>
+        </div> 
+      </div>
     </section>
-    </div>
 
-    <div class="container">
     <section class="portfolio">
-      <h2 class="subheading">Мои работы</h2>
-      <figure>
-        <img src="files/project.jpg" width="928" height="536" alt="Сайт инструктора Кекса">
-      </figure>
-      <h3>Сайт инструктора Кекса</h3>
-      <p>Небольшой лендинг о школе для начинающих.</p>
-      <a class="button" href="source/project/index.html">Открыть страницу</a>
+      <div class="container">
+        <h2 class="subheading">Мои работы</h2>
+        <figure>
+          <img src="files/project.jpg" width="928" height="536" alt="Сайт инструктора Кекса">
+        </figure>
+        <h3>Сайт инструктора Кекса</h3>
+        <p>Небольшой лендинг о школе для начинающих.</p>
+        <a class="button" href="source/project/index.html">Открыть страницу</a>
 
-      <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p>
+        <h3>Блог начинающего верстальщика</h3>
+        <p>Статический блог про обучение HTML и CSS.</p>
+      </div>
     </section>
-    </div>
     
     <footer class="page-footer">
       <div class="container">
